--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -2,7 +2,7 @@
 
 gameDLL:
 {
-	path_win:										"game_dll/build/Release/game_dll.dll"
+	path_win:										"game_dll/cmake-build-debug/libgame_dll.so"
 }
 
 // "_empty" is already imported in order to build logic around it
