--- a/inMyRoom_vulkan/testGames/SnakeGame/game_dll/CMakeLists.txt
+++ b/inMyRoom_vulkan/testGames/SnakeGame/game_dll/CMakeLists.txt
@@ -15,11 +15,12 @@ if (MSVC)
     set(CMAKE_C_FLAGS_RELEASE     "${CMAKE_C_FLAGS_RELEASE} ${relFlags}")
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${relFlags}")
 else ()
-    add_compile_options(-m64)
-    add_definitions(-mavx -march=corei7-avx -mtune=corei7-avx)
-    set(OPT_FLAGS "-O3 -ffast-math -DNDEBUG")
-    set(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE} ${OPT_FLAGS}")
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OPT_FLAGS}")
+    set(COMMON_FLAGS "-m64 -fvisibility=hidden")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${COMMON_FLAGS}")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${COMMON_FLAGS}")
+    set(OPT_FLAGS "-O3 -ffast-math -march=corei7-avx")
+    set(CMAKE_C_FLAGS_RELEASE   "${CMAKE_C_FLAGS_RELEASE} ${COMMON_FLAGS} ${OPT_FLAGS}")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${COMMON_FLAGS}  ${OPT_FLAGS}")
 endif()
 
 add_compile_definitions(GAME_DLL)
