--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -5,6 +5,7 @@ game: {
 }
 
 graphicsSettings: {
+	gpuPreferred:		""
 	xRes:				1600
 	yRes:				900
 	presentMode:		"FIFO"		    // Immediate, FIFO, FIFOrelaxed, Mailbox
@@ -12,7 +13,6 @@ graphicsSettings: {
 	FOV:				100.0
 	nearPlaneDistance:	0.05
 	farPlaneDistance:	50.0
-	useMipmaps:			true
 }
 
 inputSettings: {
