--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -156,7 +156,7 @@ fabs:
 				NodeData:
 				{
 					LocalSacle:					[  4.0,  4.0, 4.0]
-					GlobalTranslation:			[  0.0, -0.2, 4.0]
+					GlobalTranslation:			[  0.0, -8.0, 4.0]
 				}
 				SnakePlayer:
 				{
@@ -228,4 +228,10 @@ init:
 {
 	map_init:				"map_fab"
 	snake_0:				"snake_player"
+	snake_1:				"snake_fab0"
+    snake_2:				"snake_fab1"
+    snake_3:				"snake_fab2"
+    apple_0:				"apple_fab0"
+    apple_1:				"apple_fab1"
+    apple_2:				"apple_fab2"
 }
