Initial dynamic meshes evaluation commit

--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -118,6 +118,7 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Ray.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/Triangle.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Geometry/ViewportFrustum.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/DynamicMeshes.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/Graphics.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/PipelinesFactory.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics/ShadersSetsFamiliesCache.h"
@@ -176,6 +177,7 @@ SET(SRC #eig3    .h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Ray.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/Triangle.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Geometry/ViewportFrustum.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/DynamicMeshes.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/Graphics.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/PipelinesFactory.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics/ShadersSetsFamiliesCache.cpp"
